# technitiumdns-api

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.forgejo/workflows/: ci.yml  integration.yml  release.yml
.github/: BRANCH_PROTECTION.md
.github/actions/setup-python/: action.yml
.github/scripts/: apply-main-ruleset.sh
.github/workflows/: ci.forgejo.yml  ci.github.yml  ci.yml  dependency-review.github.yml  integration.forgejo.yml  integration.github.yml  integration.yml  release.forgejo.yml  release.github.yml  release.yml
scripts/ci/: forgejo-packages.sh
src/technitiumdns/: __init__.py  _base.py  _transport.py  async_client.py  client.py  exceptions.py
src/technitiumdns/endpoints/: __init__.py  admin.py  allowed.py  apps.py  blocked.py  cache.py  dashboard.py  dhcp.py  dns_client.py  logs.py  settings.py  user.py  zones.py
src/technitiumdns/models/: __init__.py  admin.py  allowed_blocked.py  apps.py  cache.py  common.py  dashboard.py  dhcp.py  dns_client.py  logs.py  settings.py  user.py  zones.py
tests/: conftest.py  live_helpers.py  run_live_all_endpoints.py  run_live_failed_endpoints.py  test_async_client.py  test_endpoint_specs.py  test_live_integration.py  test_models.py  test_sync_client.py  test_transport.py
tests/fixtures/admin/: cluster_state.json  sessions.json  users.json
tests/fixtures/apps/: config.json  list.json
tests/fixtures/dashboard/: metrics_json.json  stats.json  top_clients.json
tests/fixtures/dhcp/: leases.json  scope_full.json  scopes.json
tests/fixtures/errors/: 2fa_required.json  generic.json  invalid_token.json
tests/fixtures/logs/: list.json  query.json
tests/fixtures/settings/: get.json  temporary_disable.json
tests/fixtures/user/: check_update.json  login.json  sso_status.json
tests/fixtures/zones/: list.json  records.json
