[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "technitiumdns-api"
description = "Async + sync Python client for the Technitium DNS Server HTTP API"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [
    { name = "Atlas-Commons", email = "stephen@atlastechsolutions.co.uk" },
]
keywords = [
    "technitium",
    "dns",
    "api",
    "client",
    "async",
    "homeassistant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "aiohttp>=3.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aioresponses>=0.7.6",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/Atlas-Commons/technitiumdns-api"
Documentation = "https://github.com/Atlas-Commons/technitiumdns-api#readme"
Repository = "https://github.com/Atlas-Commons/technitiumdns-api"
Issues = "https://github.com/Atlas-Commons/technitiumdns-api/issues"
Changelog = "https://github.com/Atlas-Commons/technitiumdns-api/blob/main/CHANGELOG.md"
"Technitium API Docs" = "https://github.com/TechnitiumSoftware/DnsServer/blob/master/APIDOCS.md"

[tool.hatch.version]
path = "src/technitiumdns/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/technitiumdns"]

[tool.hatch.build.targets.sdist]
include = [
    "src/technitiumdns",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "C4",
    "SIM",
    "PT",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "B017", "PT011"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "aioresponses.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config -m 'not integration'"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit a real Technitium server (skipped by default)",
]

[tool.coverage.run]
branch = true
source = ["technitiumdns"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
